--- a/style.css
+++ b/style.css
@@ -1,5 +1,72 @@
-nav {
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface');
+
+body {
+	margin: 200px 0px 0px 0px;
+	background-color: #f2f2f7;
+	font-family: 'Abril Fatface', cursive;
+}
+
+/*Header block*/
+header {
+	width: 100%;
+	padding-top: 10px;
 	position: fixed;
 	top: 0;
-	right: 0;
+	left: 0;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	font-size: 20px;
+}
+
+.company-logo-img {
+	width: 50%;
+	margin: auto auto;
+}
+
+#header-img {
+	width: 100%;
+	max-width: 300px;
+}
+
+#nav-bar {
+	width: 50%;
+	margin: auto;
+}
+
+ul {
+	list-style-type: none;
+	text-align: center;
+	display: flex;
+	flex-direction: row;
+	justify-content: stretch;
+}
+
+ul li {
+	display: inline;
+	width: 30%;
+}
+
+a:link {
+	color: black;
+	background-color: transparent;
+	text-decoration: none;
+}
+
+a:visited {
+	color: black;
+}
+
+a:hover {
+	color: cornflowerblue;
+}
+
+/*
+@media only screen and (max-width: 300px) {
+	body {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+*/
 }
