--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Abril+Fatface');
 
 body {
-	margin: 200px 0px 0px 0px;
+	margin: 77px 0px 0px 0px;
 	background-color: #f2f2f7;
 	font-family: 'Abril Fatface', cursive;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-/*Header block*/
+/*Header block start*/
 header {
 	width: 100%;
 	padding-top: 10px;
+	background-color: #F2F2F7;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -60,6 +64,13 @@ a:visited {
 a:hover {
 	color: cornflowerblue;
 }
+/*Header block end*/
+
+/*Email section start*/
+#email-section {
+
+}
+
 
 /*
 @media only screen and (max-width: 300px) {
