--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Abril+Fatface');
 
 body {
-	margin: 77px 0px 0px 0px;
+	margin: 100px 0px 0px 0px;
 	background-color: #f2f2f7;
 	font-family: 'Abril Fatface', cursive;
 	display: flex;
@@ -16,29 +16,28 @@ header {
 	background-color: #F2F2F7;
 	position: fixed;
 	top: 0;
-	left: 0;
-	display: flex;
-	flex-direction: row;
-	align-items: flex-start;
 	font-size: 20px;
+	box-shadow: 0 0 5px 1px rgba(0,0,0,0.19);
 }
 
-.company-logo-img {
-	width: 50%;
-	margin: auto auto;
+div.company-logo-img {
+	width: 70%;
+	float: left;	
 }
 
-#header-img {
+img#header-img {
 	width: 100%;
 	max-width: 300px;
+	margin: 10px auto;
 }
 
-#nav-bar {
-	width: 50%;
+nav#nav-bar {
+	width: 30%;
+	float: right;
 	margin: auto;
 }
 
-ul {
+nav ul {
 	list-style-type: none;
 	text-align: center;
 	display: flex;
@@ -46,9 +45,9 @@ ul {
 	justify-content: stretch;
 }
 
-ul li {
+nav ul li {
 	display: inline;
-	width: 30%;
+	width: 33%;
 }
 
 a:link {
